# inquirer-textual

./: .capm.yml  .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: code-analysis.yml  documentation.yml  main.yml  release.yml
cli/: cli-pipe.tape  cli.tape  index.html
docs/: faq.md  index.md
docs/cli/: index.md
docs/examples/apps/: app.md
docs/examples/prompts/: checkbox.md  confirm.md  editor.tape  external.md  external.tape  path.md  path.tape  secret.md  select.tape  text.md
docs/getting-started/: index.md  multiple_prompts.tape  simple_multi_prompt.py
docs/prompts/: autocomplete.md  autocomplete.tape  checkbox.md  checkbox.tape  confirm.md  confirm.tape  editor.md  external.md  fuzzy.md  multi.md  multi.tape  number.md  pattern.md  secret.md  secret.tape  select.md  text.md  text.tape  textarea.md  wait_for_key.md  wait_for_key.tape
docs/reference/: autocomplete.md  checkbox.md  confirm.md  editor.md  fuzzy.md  multi.md  number.md  path.md  pattern.md  secret.md  select.md  text.md  textarea.md
docs/themes/: atom_one_dark.tape  index.md
examples/: app.py  app_header.py  app_shortcuts.py  async-app.py  checkbox.py  confirm.py  number.py  pizza.py  prompt_autocomplete.py  prompt_checkbox.py  prompt_choices_factory.py  prompt_confirm.py  prompt_editor.py  prompt_external.py  prompt_fuzzy.py  prompt_multi.py  prompt_number.py  prompt_path.py  prompt_pattern.py  prompt_secret.py  prompt_select.py  prompt_text.py  prompt_textarea.py  prompt_wait_for_key.py  select.py  shortcuts.py  text.py  theme-catppuccin-latte.py  themes.py  validator.py  validators.py
examples/alternatives/: inquirerpy.py  textual-autocomplete.py
examples/alternatives/inquirerpy/: main.py
examples/alternatives/python-inquirer/: main.py
examples/apps/: app.tape
examples/apps/app/: index.html
examples/prompts/: checkbox.py  checkbox.tape  confirm.tape  multi.py  multi.tape  number.py  number.tape  pattern.tape  secret.py  secret.tape  select.py  text.tape
examples/prompts/checkbox/: index.html
examples/prompts/confirm/: index.html
examples/prompts/editor/: index.html
examples/prompts/multi/: index.html
examples/prompts/number/: index.html
examples/theme/: prompt_select.py  solarized_light.py
faq/: index.html
getting-started/: app.tape  index.html  multi_prompt.py  multi_prompt.tape  multiple_prompts.py  simple_multi_prompt.py  simple_multi_prompt.tape  simple_text_prompt.py  simple_text_prompt.tape  simple_text_prompts.tape  single_prompt.tape
inquirer_textual/: InquirerApp.py  prompts.py  select.py
inquirer_textual/common/: Answer.py  AppConfig.py  Candidate.py  Choice.py  ChoiceCheckboxLabel.py  ChoiceLabel.py  InquirerContext.py  InquirerHeader.py  InquirerResult.py  Prompt.py  PromptMessage.py  PromptSettings.py  Result.py  Shortcut.py  SpinnerWidget.py  StandardTheme.py  defaults.py  match_utils.py  pfzy.py  utils.py
inquirer_textual/validators/: NotEmptyValidator.py  UniqueValidator.py
inquirer_textual/widgets/: Choice.py  InquirerAutocomplete.py  InquirerCheckbox.py  InquirerConfirm.py  InquirerEditor.py  InquirerFuzzy.py  InquirerMulti.py  InquirerNumber.py  InquirerPath.py  InquirerPattern.py  InquirerSecret.py  InquirerSelect.py  InquirerText.py  InquirerTextArea.py  InquirerWaitForKey.py  InquirerWidget.py  PromptMessage.py  Result.py  SelectResult.py  Shortcut.py
issue-34-Add_Fuzzy_widget/: action.json
issue-38-Add_name_parameter/: action.json
issue-42-Add_Theme_support/: action.json
issue-47-Add_Fuzzy_prompt/: action.json
issue-52-Add_Autocomplete_widget/: action.json  codelimit.md  report.json
main/: codelimit.md  report.json
prompts/: checkbox.tape  confirm.tape  editor.tape  external.tape  fuzzy.tape  multi.tape  number.tape  path.tape  pattern.tape  secret.tape  select.tape  text.tape  textarea.tape
prompts/autocomplete/: index.html
prompts/checkbox/: index.html
prompts/confirm/: index.html
prompts/editor/: index.html
prompts/fuzzy/: index.html
prompts/multi/: index.html
prompts/number/: index.html
prompts/path/: index.html
prompts/pattern/: index.html
prompts/secret/: index.html
prompts/select/: index.html
prompts/text/: index.html
prompts/textarea/: index.html
prompts/wait_for_key/: index.html
reference/autocomplete/: index.html
reference/checkbox/: index.html
reference/confirm/: index.html
reference/editor/: index.html
reference/fuzzy/: index.html
reference/multi/: index.html
reference/number/: index.html
reference/path/: index.html
reference/pattern/: index.html
reference/secret/: index.html
reference/select/: index.html
reference/text/: index.html
reference/textarea/: index.html
search/: search_index.json
tests/: test_InquirerApp.py
tests/common/: test_ChoiceLabel.py  test_match_utils.py  test_pfzy.py
tests/validators/: test_NotEmptyValidator.py  test_UniqueValidator.py
tests/widgets/: test_InquirerAutocomplete.py  test_InquirerCheckbox.py  test_InquirerConfirm.py  test_InquirerEditor.py  test_InquirerExternal.py  test_InquirerFuzzy.py  test_InquirerMulti.py  test_InquirerNumber.py  test_InquirerPath.py  test_InquirerPattern.py  test_InquirerSecret.py  test_InquirerSelect.py  test_InquirerText.py  test_InquirerTextArea.py  test_InquirerWaitForKey.py
themes/: atom_one_light.tape  catppuccin_frappe.tape  catppuccin_latte.tape  catppuccin_macchiato.tape  catppuccin_mocha.tape  dracula.tape  flexoki.tape  gruvbox.tape  index.html  monokai.tape  nord.tape  rose_pine.tape  rose_pine_dawn.tape  rose_pine_moon.tape  solarized_dark.tape  solarized_light.tape  textual_ansi.tape  textual_dark.tape  textual_light.tape  tokyo_night.tape
(+11 files in other folders)
