[project]
name = "inquirer-textual"
version = "0.1.0"
description = "Inquirer based on Textual"
authors = [{ name = "Rob van der Leek", email = "robvanderleek@gmail.com" }]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9,<3.15"

dependencies = [
    "textual>=6.4.0",
]

[project.urls]
Changelog = "https://github.com/robvanderleek/inquirer-textual/blob/master/CHANGELOG.md"
Documentation = "https://robvanderleek.github.io/inquirer-textual/"
Source = "https://github.com/robvanderleek/inquirer-textual"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-textual-snapshot>=1.1.0",
    "textual-dev>=1.8.0",
    "mkdocs-material>=9.6.21",
    "mkdocs-glightbox>=0.5.2",
    "mkdocstrings[python]>=0.30.1",
    "python-semantic-release>=9.21.0",
    "poethepoet>=0.37.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
branch = "main"
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [ "inquirer_textual/version.py:version" ]
upload_to_repository = false
upload_to_release = false

[tool.poe.tasks.gifs]
help = "Generate documentation gifs"
shell = """
    vhs docs/prompts/checkbox.tape
    vhs docs/prompts/confirm.tape
    vhs docs/prompts/multi.tape
    vhs docs/prompts/number.tape
    vhs docs/prompts/secret.tape
    vhs docs/prompts/select.tape
    vhs docs/prompts/text.tape
"""
