[project]
name = "inquirer-textual"
version = "0.2.0"
description = "Inquirer based on Textual"
authors = [{ name = "Rob van der Leek", email = "robvanderleek@gmail.com" }]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9,<3.15"

dependencies = [
    "textual>=6.11.0",
]

[project.optional-dependencies]
examples = [
    "textual-slider>=0.2.0",
]

[project.urls]
Changelog = "https://github.com/robvanderleek/inquirer-textual/blob/master/CHANGELOG.md"
Documentation = "https://robvanderleek.github.io/inquirer-textual/"
Source = "https://github.com/robvanderleek/inquirer-textual"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-textual-snapshot>=1.1.0",
    "textual-dev>=1.8.0",
    "mkdocs-material>=9.7.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocstrings[python]>=0.30.1",
    "poethepoet>=0.37.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
branch = "main"
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [ "inquirer_textual/version.py:version" ]
upload_to_repository = false
upload_to_release = false
allow_zero_version = true

[tool.poe.tasks.gifs]
help = "Generate documentation gifs"
shell = """
    vhs docs/examples/prompts/checkbox.tape
    vhs docs/examples/prompts/confirm.tape
    vhs docs/examples/prompts/editor.tape
    vhs docs/examples/prompts/external.tape
    vhs docs/examples/prompts/multi.tape
    vhs docs/examples/prompts/number.tape
    vhs docs/examples/prompts/pattern.tape
    vhs docs/examples/prompts/secret.tape
    vhs docs/examples/prompts/select.tape
    vhs docs/examples/prompts/text.tape
    vhs docs/examples/apps/app.tape
"""
